# stampy

./: README.md  pyproject.toml
src/: main.py
stampy/: main.py
tests/: test_main.py
