[tool.poetry]
name = "stampy"
version = "0.1.2.2"
description = "４文字の文字列をスタンプ風画像に変換するツール "
authors = ["Comamoca <comamoca.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Pillow = "^9.2.0"
click = "^8.1.3"

[tool.poetry.scripts]
stampy = "stampy.main:main"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
